# ZEPHYRUS

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  XUV_flux.py  comparison_proteus_output_and_test_earth.py  constants.py  escape.py  escape_from_proteus_simulation.py  limited.py  main.py  main_draft.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_full.txt  test_TOI561b.py  test_earth.py  tests-integration.json  tests-total.json  tests-unit.json
.github/: CODEOWNERS  copilot-instructions.md
.github/.claude/rules/: zephyrus-code-review.md  zephyrus-tests.md
.github/workflows/: docs.yaml  nightly.yml  publish-test-badges.yml  publish.yaml  tests.yaml
comparison_work/: Fxuv_models_sun.py  comparison_Fxuv_models_sun.py  comparison_Fxuv_on_escape.py  comparison_escape_computations_models.py  escape_formulation.py  extract_XUV_tracks_from_MORS.py  impact_Fxuv_on_escape.py
data/: XUV_flux.py
data/Baraffe_2015/: BHAC15-M1p000.txt
data/Escape_computations/MLR_computations/: MLR_computation_Attia+2021_with_Lxuv.txt  MLR_computation_Lopez+2012_with_Star.txt  MLR_isofate_sun.txt
data/Fxuv_tracks/MORS_stellar_evolution_tracks/: Lxuv_vs_age_Star_0.4Msun_Omega_1.0.txt  Lxuv_vs_age_Star_0.8Msun_Omega_1.0.txt  Lxuv_vs_age_Star_1.0Msun_Omega_1.0.txt  Lxuv_vs_age_Star_1.2Msun_Omega_1.0.txt
data/MLR_computations/: MLR_computation_Attia+2021_with_Star.txt  MLR_computation_Cherubim+2024_with_Lxuv.txt  MLR_computation_Cherubim+2024_with_Star.txt  MLR_computation_Lopez+2012_with_Lxuv.txt  MLR_isofate_G5.txt  MLR_values_10Myr_and_today_isofate.txt  MLR_values_10Myr_and_today_zephyrus.txt
data/MLR_computations_from_PROTEUS_simulation_for_Earth/: EL_escape_all_wavelength_flux_from_PROTEUS_simulation.txt  EL_escape_only_xuv_flux_from_PROTEUS_simulation.txt
data/Mors_stellar_evolution_tracks/: Lxuv_vs_age_Star_0.2Msun_Omega_1.0.txt  Lxuv_vs_age_Star_0.6Msun_Omega_1.0.txt  Star_0.2Msun_Myr_Omega_1.0.pickle  Star_0.4Msun_Myr_Omega_1.0.pickle  Star_0.6Msun_Myr_Omega_1.0.pickle  Star_0.8Msun_Myr_Omega_1.0.pickle  Star_1.0Msun_Myr_Omega_1.0.pickle  Star_1.2Msun_Myr_Omega_1.0.pickle
data/PROTEUS_simulation_Fxuv_sun_earth/: 10013168.sfluxsurf  10052414.sflux  10052414.sfluxsurf  10090515.sfluxsurf  10190315.sflux  10466794.sfluxsurf  10510759.sfluxsurf  10532131.sflux  10650586.sfluxsurf  10660899.sflux  10717260.sflux  10744118.sflux  10768287.sfluxsurf  10836.sflux  1107442.sflux  1141768.sflux  1172662.sflux  1205101.sfluxsurf  124192.sflux  137993.sfluxsurf  153211.sfluxsurf  1647747.sfluxsurf  169991.sfluxsurf  2049738.sfluxsurf  20844.sfluxsurf  208893.sflux  2673647.sfluxsurf  2827631.sflux  2910445.sfluxsurf  2997400.sflux  3390932.sflux  3618446.sflux  3740805.sflux  3740805.sfluxsurf  383577.sflux  383577.sfluxsurf  4089292.sflux  423987.sflux  42901.sfluxsurf  4562482.sfluxsurf  (+27 more)
data/RotationXUVTracks/: ReadMe.txt
data/XUV_tracks_from_proteus/: 10013168.sflux  100325.sfluxsurf  10123815.sfluxsurf  10158780.sfluxsurf  10223427.sflux  10310870.sflux  10310870.sfluxsurf  10338548.sflux  10338548.sfluxsurf  10417543.sfluxsurf  10442505.sflux  10466794.sflux  10490405.sflux  10510759.sflux  10553896.sfluxsurf  10572962.sflux  10611728.sflux  10631412.sfluxsurf  10650586.sflux  10660899.sfluxsurf  10677209.sflux  1069302.sfluxsurf  10704903.sfluxsurf  10729647.sflux  10744118.sfluxsurf  10757119.sfluxsurf  111676.sflux  111676.sfluxsurf  1141768.sfluxsurf  1172662.sfluxsurf  1239162.sflux  124192.sfluxsurf  1351913.sflux  137993.sflux  1393317.sflux  1393317.sfluxsurf  1436792.sflux  1475920.sflux  1511136.sfluxsurf  1576111.sflux  (+100 more)
docs/: getting_started.md  index.md  proteus_framework.md
docs/Community/: contact.md
docs/Explanations/: limitations.md  model.md  proteus.md  testing.md
docs/How-to/: documentation.md  installation.md  run_tests.md
docs/Reference/: parameters.md
docs/Tutorials/: first_run.md
docs/Validation/: boiloff.md  collision.md  escape.md
docs/javascripts/: header-links.js
docs/overrides/: main.html
docs/stylesheets/: extra.css  footnotes.css
draft_scripts/: Fxuv_evolution_tracks.py  comparison_Fxuv_FWLMors_IsoFate_Baraffe_SUN.py  comparison_proteus_output_and_test_earth.py  functions_draft.py  import_setup.py  main.py  plot_Fxuv_evolution_tracks.py  test.py  verification_computation_MLR.py
draft_scripts/Comparison_escape/: data_MLR_comparison_attia_isofate.py  plot_MLR_comparison_attia_isofate.py
draft_scripts/MLR_comparison_isofate/: MLR_computation_zephyrus.py  plot_masses_MLR.py
draft_scripts/test_fwlmors/: comparison_Star_vs_Lxuv.py  test_fwlmors.py  test_fwlmors_Leuv.py  test_fwlmors_Lxray.py  test_fwlmors_Lxuv_from_Lxuv_function.py  test_fwlmors_Lxuv_from_Star_class.py  test_fwlmors_plot_Lbol.py  xuv_from_Isofate.py
examples/: demo_earth.py  demo_fractionation.py
examples/comparison_work/: Fxuv_models.py  Fxuv_models_sun.py  escape_formulation.py  extract_XUV_tracks_from_MORS.py  impact_Fxuv_on_escape.py  test_fxuv_mors.py
examples/demo_earth/: demo_earth.py
examples/demo_fractionation/: compute_binary_coeff.py  demo_fractionation.py  demo_fractionation_proteus.py  fractionation_time_evolution.csv  test2_fractionation_isofate.py  test3.py  test_functions_fractionation_binary.py  test_simple.py
examples/fractionation/: compute_binary_coeff.py
examples/integration_proteus/: escape_from_proteus_simulation.py
integration_proteus/: escape_from_proteus_simulation.py
plots/test_earth/: test_TOI561b.py
src/zephyrus/: XUV_flux.py  __init__.py  binary_diffusion_coefficients.py  boiloff.py  collision.py  constants.py  escape.py  fractionation.py  planets_parameters.py
test/: test_earth.py  test_fwlmors.py
tests/: test_boiloff.py  test_collision.py  test_collision_properties.py  test_constants.py  test_earth.py  test_escape.py  test_escape_properties.py  test_mors_coupling.py  test_planets_parameters.py
tools/: Fxuv_functions.py  check_file_sizes.sh  check_test_quality.py  generate_test_badges.py  update_coverage_threshold.py  validate_test_structure.sh
(+206 files in other folders)
